Refactor GitHub workflows and remove submodules
Added issue and PR templates, a new PR validation workflow, and updated validation workflows to trigger on PR events. Removed the upstream submodule and related scripts, replaced en.json symlink with a direct file sync, and updated the README to reflect the new sync process. Cleaned up obsolete files and improved documentation for contributors.

--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "validate:missing": "node scripts/validate-missing.js",
     "validate:mappings": "node scripts/validate-mappings.js",
     "validate:all": "npm run validate:json && npm run validate:mappings && npm run validate:missing",
-    "sync:en": "node scripts/sync-en.js",
-    "setup:submodule": "node scripts/setup-submodule.js"
+    "sync:en": "node scripts/sync-en.js"
   },
   "keywords": [
     "featherpanel",
     "translations",
     "i18n"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "MythicalSystems",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {}
 }
